@@ -55,10 +55,8 @@ static char *synopsis = "Load Asterisk ADSI Scripts into phone";
 /* #define DUMP_MESSAGES */
 
 static char *descrip =
-"  ADSIProg(script): Programs an ADSI Phone with the given script.\n"
-"If none is specified, the default script is used.  The reprogramming\n"  
-"will complete successfully, except in cases where the device is  \n"
-"disconnected or hungup.\n";
+"  ADSIProg(script): This application programs an ADSI Phone with the given\n"
+"script. If nothing is specified, the default script (asterisk.adsi) is used.\n"
 
 STANDARD_LOCAL_USER;
 
